[package]
name = "node_graph_interpreter"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
debug = "full"
lto = "thin"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
