[package]
name = "predictive_coding"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
bytemuck = "1.25.0"
dotenvy = "0.15.7"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
yansi = "1.0.1"
